--- a/usercenter/pom.xml
+++ b/usercenter/pom.xml
@@ -35,6 +35,12 @@
             <version>2.7.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.19.1</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
